# GP_RL

./: .gitignore  README.md
code_base/gp-learning-main/: GPModelBatch.py  README.md  generate_optimization_prog_data.py  test_gp.py
code_base/gp-learning-main/data/: avant_TrainingData.pkl
code_base/gp-learning-orig/: README.md  configs.py  utils.py
code_base/gp-learning-orig/data/: avant_TestData.pkl
code_base/gp-learning/GaussianProcess/: bagreader.py  bagreader_sync.py  example_GP.py  gp_rl_main.py  process_bag_data.py  visualize_data.py
code_base/gp-learning/data/: boom_trial2_10hz.pkl  boom_trial5_10hz.pkl  boom_trial6_10hz.pkl  boom_trial7_10hz.pkl  boom_trial_1_10hz.pkl  boom_trial_2_10hz.pkl  boom_trial_3_10hz.pkl  boom_trial_4_10hz.pkl  boom_trial_5_10hz.pkl  boom_trial_6_10hz.pkl  boom_trial_7_10hz.pkl  boom_xu_trial1_10hz.pkl  boom_xu_trial2_10hz.pkl  boom_xu_trial3_10hz.pkl  boom_xu_trial4_10hz.pkl  mix_training.pkl  (+25 more)
code_base/gp-learning/gp_rl_ros_ws/src/gazebo_sim/gazebo_control_interface/: .gitignore  data  gp_rl  package.xml  results  setup.cfg  setup.py
code_base/gp-learning/gp_rl_ros_ws/src/gazebo_sim/gazebo_control_interface/config/: params.yaml
code_base/gp-learning/gp_rl_ros_ws/src/gazebo_sim/gazebo_control_interface/gazebo_control_interface/: control_rl_machine.py  gazebo_control_client.py  gp_control_node.py  pose_control_node.py
code_base/gp-learning/gp_rl_ros_ws/src/gazebo_sim/gazebo_control_interface/gazebo_control_interface/control_utils/cfg/: configs.py
code_base/gp-learning/gp_rl_ros_ws/src/gazebo_sim/gazebo_control_interface/gazebo_control_interface/control_utils/models/: GPModel.py
code_base/gp-learning/gp_rl_ros_ws/src/gazebo_sim/gazebo_control_interface/gazebo_control_interface/control_utils/utils/: data_loading.py  plot.py  rl_utils.py
gazebo_sim/avant_description/: CMakeLists.txt  package.xml
gazebo_sim/avant_description/config/: Joint_velocity_control.yaml  dual_ekf_GNSS.yaml  interface_config.yaml  nav2_params.yaml  static_params.yaml
gazebo_sim/avant_description/launch/: control.launch.py  gp.launch.py
gazebo_sim/avant_description/meshes/: Backframe.STL  Boom.STL  Bucket.STL  Front_boom.STL  Frontbody.STL  Kattotolppa_keltainen.STL  Puhallin_etu.STL  Rengas.STL  Rengas_keskitappi.STL  Seat.STL  Skanneri_harmaaosa.STL  Vanne.STL
gazebo_sim/avant_description/urdf/: avant_bucket.urdf  avant_bucket_kalib.urdf
gazebo_sim/gazebo_control_interface/: README.md  setup.py
knowledge_base/GP_RL/: original_code_base_analysis.md
(+152 files in other folders)
